src/static/kit/styles.css
/* ... */
/* Tags edit */
table.tags-edit {
	/*display: inline-table;*/
	margin: 6px auto;
}
table.tags-edit th {
	padding: 6px;
	line-height: 20px;
}
table.tags-edit th.name {
	min-width: 80px;
}
table.tags-edit tr > td:nth-last-child(3) {
	text-align: right;
}
table.tags-edit td {
	padding: 4px 16px 4px 8px;
	line-height: 20px;
	border-top: 1px solid #bbb;
}
table.tags-edit td .btn-small {
	margin: 0 2px;
}
table.tags-edit tr > td:last-child {
	white-space: pre;
}

/* Users & Contest users*/
table.users,
table.contest-users {
	/*display: inline-table;*/
	margin: 6px auto;
}
table.users th.username,
table.contest-users th.username {
	min-width: 90px;
}
table.users th.first-name,
table.users th.last-name,
table.contest-users th.first-name,
table.contest-users th.last-name {
	min-width: 100px;
}
table.users th.email,
table.contest-users th.email {
	min-width: 120px;
}
table.users th.type {
	min-width: 90px;
}
table.contest-users th.mode {
	min-width: 110px;
}
table.users th,
table.contest-users th {
	padding: 6px;
	line-height: 20px;
}
table.users td,
table.contest-users td {
	padding: 4px 24px 4px 8px;
	line-height: 20px;
	border-top: 1px solid #bbb;
}
table.users tr > td:first-child,
table.contest-users tr > td:first-child {
	text-align: right;
}
table.users tr > td:last-child,
table.contest-users tr > td:last-child {
	white-space: pre;
}

/* User-info, problem-info */
.user-info,
.problem-info {
	display: inline-block;
	min-width: 400px;
	margin: 8px auto;
	padding: 4px 10px;
	background: #fdfdfd;
	border: 1px solid #dddddd;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
.user-info > div,
.problem-info > div {
	margin-bottom: 5px;
	display: flex;
	-webkit-flex-flow: row nowrap;
	flex-flow: row nowrap;
}
.user-info > div > label,
.problem-info > div > label {
	min-width: 120px;
	text-align: right;
	margin: 0 10px 0 0;
	font-size: 14px;
	color: #777;
}
.user-info > div > label::after,
.problem-info > div > label::after {
	content: ": ";
}
.user-info > div.first-name,
.user-info > div.last-name,
.problem-info > div.name,
.problem-info > div.label {
	font-size: 16px;
	line-height: 22px;
}

.users .admin,
.user-info .admin,
.contest-users .moderator {
	color: #ff0000;
	font-weight: bold;
}
.users .teacher,
.user-info .teacher {
	color: #ff8c00;
	font-weight: bold;
}
.users .normal,
.user-info .normal,
.contest-users .contestant {
	color: #0000ff;
	font-weight: bold;
}

/* Contests */
table.contests {
	/*display: inline-table;*/
	margin: 6px auto;
}
table.contests th {
	padding: 6px;
	line-height: 20px;
}
table.contests th.name {
	min-width: 80px;
}
/*table.contests tr > td:nth-last-child(3) {
	text-align: right;
}*/
table.contests td {
	padding: 4px 16px 4px 8px;
	line-height: 20px;
	border-top: 1px solid #bbb;
}
table.contests td .btn-small {
	margin: 0 2px;
}
table.contests tr > td:last-child {
	white-space: pre;
}

/* Files */
table.files th.time {
	min-width: 150px;
}
table.files th.name {
	min-width: 100px;
}
table.files th.size {
	min-width: 7em;
}
table.files th.description {
	min-width: 100px;
}
table.files td:nth-child(4) {
	max-width: 600px;
	word-wrap: break-word;
}
table.files th {
	text-align: center;
	padding: 6px;
	line-height: 20px;
}
table.files td {
	padding: 4px 16px 4px 8px;
	line-height: 20px;
	border-top: 1px solid #bbb;
}

/* Logs */
pre.logs {
	margin: 10px 32px 10px 10px;
	min-height: 400px;
	padding: 2px;
	font-family: "Ubuntu Mono",Monaco,Menlo,Consolas,"Courier New",monospace;
	white-space: pre-wrap;
	background: #131926;
	color: #b3b3b3;
	border: 1px solid #afafaf;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	overflow-y: auto;
	position: relative;
}
pre.logs::-webkit-scrollbar {
    width: 10px;
    background: #606060;
}
pre.logs::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
    -webkit-border-radius: 10px;
    border-radius: 10px;
}
pre.logs::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: #ddd;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}
pre.logs .loader,
pre.logs .loader-info {
	position: absolute;
	top: 0;
	left: 50%;
}
pre.logs img.loader {
	margin-left: -15.5px;
}
pre.logs .loader-info,
pre.logs span.loader {
	-webkit-transform: perspective(1px) translateX(-50%);
	-moz-transform: perspective(1px) translateX(-50%);
	-ms-transform: perspective(1px) translateX(-50%);
	transform: perspective(1px) translateX(-50%);
}

pre.logs .green {
	color: #54ff54;
}
pre.logs .blue {
	color: #5454ff;
}
pre.logs .red {
	color: #ff5454;
}
pre.logs .yellow {
	color: #ffff54;
}
pre.logs .pink {
	color: #ff00ff;
}
pre.logs .turquoise {
	color: #40e0d0;
}

/* Forms */
.form-container {
	display: table;
	/*min-width: 430px;*/
	margin: 20px auto 0;
	background: #fdfdfd;
	border: 1px solid #dddddd;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
}
.form-container h1 {
	margin: 0.67em 0.7em;
	text-align: center;
}
.form-container h4 {
	margin: -10px 7px 7px;
	font-size: 19px;
	font-weight: normal;
	line-height: normal;
	text-align: center;
}
.form-container form {
	display: block;
	padding: 20px;
	margin-top: -20px;
}
.form-container form > .field {
	margin-bottom: 15px;
}
form .field-group {
	display: flex;
	min-height: 30px;
	margin-bottom: 15px;
	-webkit-flex-flow: row nowrap;
	flex-flow: row nowrap;
	-webkit-align-items: center;
	align-items: center;
}
form .field-group > :not(.btn-small) + * {
	margin-left: 10px;
}
form .field-group > :first-child {
	width: 120px;
	margin: 0 10px 0 0;
	font-size: 14px;
	text-align: right;
}
form .field-group > textarea {
	min-width: 65%;
}
.form-container form input[type="submit"] {
	margin-left: 140px;
}
.form-container form div.submit-yes-no {
	display: table;
	margin: 15px auto 0;
}
.form-container form div.button-row {
	display: flex;
    flex-flow: row nowrap;
}
.form-container form div.button-row > .btn {
	margin-right: 10px;
}
/* ... */

